--- a/.env
+++ b/.env
@@ -3,11 +3,12 @@
 CHALLENGE_JWT_SECRET="ABC123"
 USER_JWT_SECRET="A123124124"
 
+NODE_ENV="production"
 API_HOST="http://localhost:3000"
 MIXPANEL_ENV="development"
 # This key is of a test env. You can use your own for developing purposes.
-MIXPANEL_KEY="b10b850880cb0a8557d878c2e6024d03"
-COMMIT_SHA="dev"
+MIXPANEL_KEY="6e5078dc82d906dd0791dfe8861fc310"
+COMMIT_SHA="velero_dev"
 INFURA_PROJECT_ID="683836c8b9384898a9f99d483ae389bc"
 # This is a test value for local development
 INFURA_PROJECT_ID_BACKEND="683836c8b9384898a9f99d483ae389bc"
